prod/preview.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vote-preview
  labels:
    role: vote
spec:
  selector:
    app: vote
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      nodePort: 30300
  type: NodePort
